<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/current_password"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/newPasswordInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/newPasswordConfirmInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword" />

</LinearLayout>
